force-app/main/default/objects/Insurance_Details__c/Insurance_Details__c.object-meta.xml
<CustomObject>
    <label>Insurance Details</label>
    <nameField>
        <displayFormat>IDN-{0000}</displayFormat>
        <label>Insurance Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>