force-app/main/default/objects/Insurance_Details__c/fields/Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Disbursal__c</fullName>
    <label>Disbursal</label>
    <referenceTo>Disbursal__c</referenceTo>
    <relationshipLabel>Insurance Details</relationshipLabel>
    <relationshipName>Insurance_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>