force-app/main/default/objects/Insurance_Details__c/fields/Insurance_Medical_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Medical_Test_Result__c</fullName>
    <label>Insurance Medical Test Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Rated Up</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>