force-app/main/default/objects/Insurance_Details__c/fields/Insurance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Requirement__c</fullName>
    <label>Insurance Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOGH</fullName>
            </value>
            <value>
                <fullName>DOGH + MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>