force-app/main/default/objects/Insurance_Details__c/fields/Insurance_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Waiver__c</fullName>
    <label>Insurance Waiver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>