force-app/main/default/objects/Insurance_Details__c/fields/Insured_Person_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person_Date_of_Birth__c</fullName>
    <label>Insured Person Date of Birth</label>
    <type>Date</type>
</CustomField>