force-app/main/default/objects/Insurance_Details__c/fields/Insured_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person_Name__c</fullName>
    <label>Insured Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>