force-app/main/default/objects/Insurance_Details__c/fields/Nominee_DOB_as_per_KYC__c.field-meta.xml
<CustomField>
    <fullName>Nominee_DOB_as_per_KYC__c</fullName>
    <label>Nominee DOB as per KYC</label>
    <type>Date</type>
</CustomField>