force-app/main/default/objects/Insurance_Details__c/fields/Nominee_KYC_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Nominee_KYC_ID_No__c</fullName>
    <label>Nominee KYC ID No</label>
    <type>TextArea</type>
</CustomField>