force-app/main/default/objects/Insurance_Details__c/fields/Nominee_KYC_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Nominee_KYC_ID_Type__c</fullName>
    <label>Nominee KYC ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Number</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>PAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>