force-app/main/default/objects/Insurance_Details__c/fields/Nominee_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Relationship_Type__c</fullName>
    <label>Nominee Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood Relative</fullName>
            </value>
            <value>
                <fullName>Not a Blood Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>