force-app/main/default/objects/Insurance_Details__c/fields/Nominee_Type__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nominee Type</label>
    <type>Checkbox</type>
</CustomField>