force-app/main/default/objects/Insurance_Details__c/fields/Not_Part_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Not_Part_of_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Part of Loan</label>
    <type>Checkbox</type>
</CustomField>