force-app/main/default/objects/Insurance_Details__c/fields/Part_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part of Loan</label>
    <type>Checkbox</type>
</CustomField>